--- a/Carangas/Base.lproj/Main.storyboard
+++ b/Carangas/Base.lproj/Main.storyboard
@@ -169,7 +169,7 @@
                                             <outlet property="delegate" destination="POk-h0-Csc" id="0p4-rg-bR4"/>
                                         </connections>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Preço" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g28-ii-qKG">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Preço (R$ ###,##)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g28-ii-qKG">
                                         <rect key="frame" x="0.0" y="80" width="327" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="JNy-I4-nmb"/>
