--- a/Carangas/Listing/View/Listing.storyboard
+++ b/Carangas/Listing/View/Listing.storyboard
@@ -10,7 +10,7 @@
         <!--Carangas-->
         <scene sceneID="J5x-MI-WMG">
             <objects>
-                <tableViewController id="OK1-Ie-AaM" customClass="CarsTableViewController" customModule="Carangas" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CarsTableViewController" id="OK1-Ie-AaM" customClass="CarsTableViewController" customModule="Carangas" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="aNz-Io-ARh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -44,9 +44,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="Xy0-HF-f9W" kind="show" identifier="carSegue" id="ycY-0g-tfh"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -57,10 +54,11 @@
                     <navigationItem key="navigationItem" title="Carangas" id="x1D-cR-YoL">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="uBV-U3-Te5">
                             <connections>
-                                <segue destination="IR1-rI-3dG" kind="show" identifier="addSegue" id="I7H-gR-OXX"/>
+                                <action selector="createCar:" destination="OK1-Ie-AaM" id="sIZ-rV-ABy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="YIb-vd-sKV">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -77,26 +75,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m8v-vI-UXt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="696.79999999999995" y="147.97601199400302"/>
-        </scene>
-        <!--CreateUpdate-->
-        <scene sceneID="NFr-gR-1xt">
-            <objects>
-                <viewControllerPlaceholder storyboardName="CreateUpdate" id="IR1-rI-3dG" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="cDd-oZ-fqt"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OJO-x9-dNC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1418" y="-70"/>
-        </scene>
-        <!--Visualization-->
-        <scene sceneID="GKT-D4-CKs">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Visualization" id="Xy0-HF-f9W" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="pi5-g2-YBG"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qdn-ZZ-Zeg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1414" y="246"/>
         </scene>
     </scenes>
 </document>
