--- a/Carangas/Visualization/View/Visualization.storyboard
+++ b/Carangas/Visualization/View/Visualization.storyboard
@@ -12,13 +12,13 @@
         <!--Caranga-->
         <scene sceneID="Jgc-sf-Gag">
             <objects>
-                <viewController id="sgV-b4-M3W" customClass="CarViewController" customModule="Carangas" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CarViewController" id="sgV-b4-M3W" customClass="CarViewController" customModule="Carangas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O9Y-Om-VPW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="oJq-Yj-EQn">
-                                <rect key="frame" x="24" y="64" width="366" height="73.5"/>
+                                <rect key="frame" x="24" y="108" width="366" height="73.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marca" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcK-yy-gs8">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="20.5"/>
@@ -56,6 +56,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="lbBrand" destination="qcK-yy-gs8" id="BE9-6d-ZE5"/>
                         <outlet property="lbGasType" destination="WwY-pS-3Id" id="vfU-ha-yGe"/>
